fix: [RGOeX-26822] Remove horizontal scroll on learner dashboard

--- a/paragon/blocks/_learner-dashboard.scss
+++ b/paragon/blocks/_learner-dashboard.scss
@@ -22,18 +22,21 @@
         width: 100%;
         position: relative;
         padding: $header-vertical-padding 12px !important;
+        box-sizing: border-box;
 
-        &:after {
-            content: "";
-            position: absolute;
-            left: 50%;
-            right: 0;
-            height: 100%;
-            width: 100vw;
-            transform: translateX(-50%);
-            opacity: 0.5;
-            box-shadow: 0 0 6px 0 rgba($black, .75);
-            pointer-events: none;
+        & + * {
+            position: relative;
+
+            &:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 0;
+                height: 5px;
+                width: 100%;
+                background: linear-gradient(rgba($black, .25), rgba($black, 0));
+                opacity: .7;
+            }
         }
 
         .logo {
